# Deepwiki-Local

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-ollama-local  Ollama-instruction.md  README.es.md  README.fr.md  README.ja.md  README.kr.md  README.md  README.pt-br.md  README.ru.md  README.vi.md  README.zh-tw.md  README.zh.md  UBUNTU_DEPLOYMENT.md  UBUNTU_DEPLOYMENT_GUIDE.md  docker-compose.yml  export-image.ps1  next.config.ts  package.json  stop.ps1
api/: README.md  __init__.py  api.py  azureai_client.py  bedrock_client.py  config.py  dashscope_client.py  data_pipeline.py  google_embedder_client.py  logging_config.py  main.py  ollama_patch.py  openai_client.py  openrouter_client.py  prompts.py  pyproject.toml  rag.py  scheduler.py  sentence_transformer_client.py  simple_chat.py  websocket_wiki.py
api/config/: embedder.json  embedder.ollama.json.bak  generator.json
api/tools/: embedder.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/[owner]/[repo]/: page.tsx
src/app/api/models/presets/: route.ts
src/app/api/models/presets/[index]/: route.ts
src/app/api/wiki/projects/: route.ts
src/app/schedules/: page.tsx
src/components/: Ask.tsx  ConfigurationModal.tsx  ModelManagementModal.tsx  ModelSelectionModal.tsx  TokenInput.tsx  UserSelector.tsx
src/messages/: en.json  es.json  fr.json  ja.json  kr.json  pt-br.json  ru.json  vi.json  zh-tw.json  zh.json
src/utils/: websocketClient.ts
tests/: README.md  __init__.py  run_tests.py
tests/integration/: test_full_integration.py
tests/unit/: test_all_embedders.py  test_google_embedder.py
